[gd_scene load_steps=31 format=3 uid="uid://c806ck12gtw51"]

[ext_resource type="Script" path="res://Scripts/home.gd" id="1_esjfk"]
[ext_resource type="Texture2D" uid="uid://br0hgr2f87nuv" path="res://assets/star_out.png" id="2_ewcuq"]
[ext_resource type="Texture2D" uid="uid://iqh4kyw202rf" path="res://assets/star.png" id="3_bhpxn"]
[ext_resource type="Script" path="res://Scripts/TextureButton.gd" id="4_3uf00"]
[ext_resource type="Script" path="res://Scripts/Term_Text.gd" id="5_c5uak"]
[ext_resource type="Script" path="res://Scripts/Def_text.gd" id="6_ffwy1"]
[ext_resource type="Script" path="res://Scripts/Node2D.gd" id="7_gs6qx"]
[ext_resource type="Texture2D" uid="uid://ca15aq3ccn6o5" path="res://flipanim/f_2.png" id="8_v65nh"]
[ext_resource type="Texture2D" uid="uid://ccjpkal8a2s1u" path="res://flipanim/f_1.png" id="9_5v2b5"]
[ext_resource type="Texture2D" uid="uid://dvuax55yvqjqg" path="res://nextanim/pd_1.png" id="10_0ro72"]
[ext_resource type="Texture2D" uid="uid://dw3dcmuh02ku3" path="res://nextanim/pd_2.png" id="11_a0x8w"]
[ext_resource type="Texture2D" uid="uid://43fvh00vwsqb" path="res://nextanim/pd_3.png" id="12_juedf"]
[ext_resource type="Texture2D" uid="uid://dqek6cp2e8wmr" path="res://nextanim/pd_4.png" id="13_p101x"]
[ext_resource type="Texture2D" uid="uid://de7f1so64edk7" path="res://nextanim/pd_5.png" id="14_ygsog"]
[ext_resource type="Texture2D" uid="uid://clod81a8px0hi" path="res://nextanim/pd_6.png" id="15_7rl1m"]
[ext_resource type="Texture2D" uid="uid://cuvtm8ah8aceb" path="res://assets/istockphoto-1152524449-612x612.jpg" id="16_hk2m5"]
[ext_resource type="Script" path="res://Scripts/AnimatedSprite2D.gd" id="17_ln54c"]
[ext_resource type="Script" path="res://Scripts/Flip_But.gd" id="18_qcfh1"]
[ext_resource type="Script" path="res://Scripts/Button.gd" id="19_q7ng4"]
[ext_resource type="Script" path="res://Scripts/Container.gd" id="20_lee6c"]
[ext_resource type="Script" path="res://Scripts/Back_Button.gd" id="21_rebba"]
[ext_resource type="Script" path="res://Scripts/Edit.gd" id="22_lmfga"]
[ext_resource type="Script" path="res://Scripts/Set_index.gd" id="23_u2fnl"]
[ext_resource type="Script" path="res://Scripts/Load_file.gd" id="24_3ywrt"]
[ext_resource type="Texture2D" uid="uid://bws0aybeaif0r" path="res://assets/Screenshot 2024-02-14 164813.png" id="25_vhe1a"]
[ext_resource type="Script" path="res://Scripts/TextEdit.gd" id="26_73u3n"]
[ext_resource type="Script" path="res://Scripts/Bottom_Row.gd" id="27_stvwi"]
[ext_resource type="Theme" uid="uid://02xo0dgxethl" path="res://themes/new_theme.tres" id="28_k6gbx"]
[ext_resource type="Script" path="res://Scripts/Study_Star.gd" id="29_qr1go"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dfalw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_v65nh")
}, {
"duration": 1.0,
"texture": ExtResource("9_5v2b5")
}],
"loop": true,
"name": &"flip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0ro72")
}, {
"duration": 1.0,
"texture": ExtResource("11_a0x8w")
}, {
"duration": 1.0,
"texture": ExtResource("12_juedf")
}, {
"duration": 1.0,
"texture": ExtResource("13_p101x")
}, {
"duration": 1.0,
"texture": ExtResource("14_ygsog")
}, {
"duration": 1.0,
"texture": ExtResource("15_7rl1m")
}],
"loop": true,
"name": &"next",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_hk2m5")
}],
"loop": true,
"name": &"term",
"speed": 5.0
}]

[node name="Home" type="Node2D"]
script = ExtResource("1_esjfk")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 1
offset_left = 912.0
offset_top = 136.0
offset_right = 1424.0
offset_bottom = 648.0
scale = Vector2(0.075, 0.075)
toggle_mode = true
texture_normal = ExtResource("2_ewcuq")
texture_pressed = ExtResource("3_bhpxn")
script = ExtResource("4_3uf00")

[node name="Term_Text" type="RichTextLabel" parent="."]
z_index = 3
offset_left = 416.0
offset_top = 224.0
offset_right = 912.0
offset_bottom = 360.0
script = ExtResource("5_c5uak")

[node name="Def_text" type="RichTextLabel" parent="."]
z_index = 3
offset_left = 416.0
offset_top = 192.0
offset_right = 912.0
offset_bottom = 360.0
script = ExtResource("6_ffwy1")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("7_gs6qx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
position = Vector2(576, 320)
scale = Vector2(1.2549, 0.941177)
sprite_frames = SubResource("SpriteFrames_dfalw")
animation = &"term"
script = ExtResource("17_ln54c")

[node name="Flip_But" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(632, 312)
script = ExtResource("18_qcfh1")

[node name="Button" type="Button" parent="Flip_But"]
offset_left = -280.0
offset_top = -112.0
offset_right = 272.0
offset_bottom = 112.0
script = ExtResource("19_q7ng4")

[node name="Container" type="Container" parent="."]
offset_left = 848.0
offset_top = 144.0
offset_right = 888.0
offset_bottom = 184.0
scale = Vector2(1.27108, 1.39286)
script = ExtResource("20_lee6c")

[node name="Next" type="Button" parent="Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
text = "Next"

[node name="Back_Button" type="Container" parent="."]
offset_left = 352.0
offset_top = 144.0
offset_right = 392.0
offset_bottom = 184.0
scale = Vector2(1.271, 1.393)
script = ExtResource("21_rebba")

[node name="Back" type="Button" parent="Back_Button"]
layout_mode = 2
text = "Back"

[node name="Edit" type="Button" parent="."]
visible = false
offset_left = 192.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 207.0
text = "EDIT"
script = ExtResource("22_lmfga")

[node name="Set_index" type="HSlider" parent="."]
offset_left = 376.0
offset_top = 432.0
offset_right = 856.0
offset_bottom = 472.0
script = ExtResource("23_u2fnl")

[node name="Load_file" type="Button" parent="."]
offset_left = 192.0
offset_top = 136.0
offset_right = 312.0
offset_bottom = 168.0
text = "LOAD"
script = ExtResource("24_3ywrt")

[node name="FileDialog" type="FileDialog" parent="Load_file"]
title = "Open a File"
initial_position = 4
size = Vector2i(333, 500)
min_size = Vector2i(200, 300)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Quiz" type="TextureRect" parent="Load_file"]
layout_mode = 0
offset_left = 72.0
offset_top = -80.0
offset_right = 1363.0
offset_bottom = 105.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("25_vhe1a")
stretch_mode = 4

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 352.0
offset_top = 360.0
offset_right = 896.0
offset_bottom = 416.0
placeholder_text = "Practice Writing it out if wrong"
script = ExtResource("26_73u3n")

[node name="Bottom_Row" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("27_stvwi")

[node name="CheckBox" type="CheckBox" parent="Bottom_Row"]
layout_mode = 0
offset_left = 352.0
offset_top = 472.0
offset_right = 480.0
offset_bottom = 503.0
theme = ExtResource("28_k6gbx")
text = "Randomize"

[node name="Study_Star" type="CheckBox" parent="Bottom_Row"]
layout_mode = 0
offset_left = 208.0
offset_top = 472.0
offset_right = 336.0
offset_bottom = 503.0
theme = ExtResource("28_k6gbx")
text = "Starred Only  "
script = ExtResource("29_qr1go")

[node name="Error" type="Label" parent="Bottom_Row"]
layout_mode = 0
offset_left = 504.0
offset_top = 472.0
offset_right = 928.0
offset_bottom = 498.0
theme = ExtResource("28_k6gbx")
horizontal_alignment = 1
uppercase = true

[connection signal="set_error" from="." to="Bottom_Row" method="_on_home_set_error"]
[connection signal="set_vis" from="." to="Bottom_Row" method="_on_home_set_vis"]
[connection signal="term_press" from="." to="Set_index" method="_on_home_term_press"]
[connection signal="term_press" from="." to="TextEdit" method="_on_home_term_press"]
[connection signal="toggled" from="TextureButton" to="TextureButton" method="_on_toggled"]
[connection signal="uncheck_star" from="Term_Text" to="Bottom_Row/Study_Star" method="_on_term_text_uncheck_star"]
[connection signal="animation_looped" from="Node2D/AnimatedSprite2D" to="Node2D" method="_on_animated_sprite_2d_animation_looped"]
[connection signal="pressed" from="Flip_But/Button" to="Term_Text" method="_on_button_pressed"]
[connection signal="pressed" from="Flip_But/Button" to="Def_text" method="_on_button_pressed"]
[connection signal="pressed" from="Flip_But/Button" to="Node2D" method="_on_button_pressed"]
[connection signal="pressed" from="Flip_But/Button" to="Node2D/AnimatedSprite2D" method="_on_button_pressed"]
[connection signal="pressed" from="Flip_But/Button" to="Flip_But" method="_on_button_pressed"]
[connection signal="pressed" from="Flip_But/Button" to="Flip_But/Button" method="_on_pressed"]
[connection signal="pressed" from="Container/Next" to="Node2D" method="_on_next_pressed"]
[connection signal="pressed" from="Container/Next" to="Node2D/AnimatedSprite2D" method="_on_next_pressed"]
[connection signal="pressed" from="Container/Next" to="Flip_But" method="_on_next_pressed"]
[connection signal="pressed" from="Container/Next" to="Container" method="_on_next_pressed"]
[connection signal="pressed" from="Back_Button/Back" to="Node2D" method="_on_back_pressed"]
[connection signal="pressed" from="Back_Button/Back" to="Node2D/AnimatedSprite2D" method="_on_back_pressed"]
[connection signal="pressed" from="Back_Button/Back" to="Flip_But" method="_on_back_pressed"]
[connection signal="pressed" from="Edit" to="Edit" method="_on_pressed"]
[connection signal="drag_ended" from="Set_index" to="Set_index" method="_on_drag_ended"]
[connection signal="pressed" from="Load_file" to="Load_file" method="_on_pressed"]
[connection signal="canceled" from="Load_file/FileDialog" to="Load_file" method="_on_file_dialog_canceled"]
[connection signal="confirmed" from="Load_file/FileDialog" to="Load_file" method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="Load_file/FileDialog" to="Load_file" method="_on_file_dialog_file_selected"]
[connection signal="focus_entered" from="TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="mouse_entered" from="TextEdit" to="." method="_on_text_edit_mouse_entered"]
[connection signal="mouse_exited" from="TextEdit" to="." method="_on_text_edit_mouse_exited"]
[connection signal="toggled" from="Bottom_Row/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Bottom_Row/Study_Star" to="Set_index" method="_on_study_star_toggled"]
